feat: most projects up

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     some of which I've included on this site. 
                 </p>
                 <p>
+                    Some more background...
+                </p>
+                <p>
                     Between 2014 and 2018 I mainly taught myself to draw portraits, since I was interested in
                     being able to capture people's likeness. After portraits, I began to
                     work on larger and more surreal scenes, as well as branch off into other mediums like
@@ -119,11 +122,11 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="galleryrow" id="portrait">
+                        <div class="galleryrow">
                             <div class="modal-item">
                                 <img class="modalimage" src="projects/holobrawl/using-ui.png" />
                                 <p class="modal-item-info">
-                                    using the game's user interface
+                                    Using the game's user interface
                                 </p>
                             </div>
                             <div class="modal-item">
@@ -209,52 +212,7 @@
                         </p>
                         <div class="galleryrow"> 
                             <div class="modal-video-item">
-                                <video class="modal-video" muted autoplay controls loop>
-                                    <source src="projects/holobrawl/HoloBrawlAlphaUI.mp4" type="video/mp4">
-                                </video>
-                                <p class="modal-item-info">
-                                    User Interface
-                                </p>
-                            </div>
-                            <div class="modal-video-item">
-                                <video class="modal-video" muted autoplay controls loop>
-                                    <source src="projects/holobrawl/HoloBrawlAlphaGameplay.mp4" type="video/mp4">
-                                </video>
-                                <p class="modal-item-info">
-                                    Gameplay
-                                </p>
-                            </div>
-                        </div>
-                        <div class="galleryrow" id="portrait">
-                            <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/using-ui.png" />
-                                <p class="modal-item-info">
-                                    using the game's user interface
-                                </p>
-                            </div>
-                            <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/pieces-puching.png" />
-                                <p class="modal-item-info">
-                                    Pieces punching eachother
-                                </p>
-                            </div>
-                            <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/piecing-fighting.png" />
-                                <p class="modal-item-info">
-                                    Pieces fighting eachother
-                                </p>
-                            </div>
-                            <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/placing-piece-to-attack.png" />
-                                <p class="modal-item-info">
-                                    Player placing their piece to attack opponent
-                                </p>
-                            </div>
-                            <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/placing-piece.png" />
-                                <p class="modal-item-info">
-                                    Player moving their piece
-                                </p>
+                                <iframe class="modal-video" src="https://www.youtube.com/embed/c0oPHvO_91k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
@@ -264,6 +222,15 @@
                             This is a Raytracer I wrote that uses BRDF calculations to render images. 
                             Implemented recursive reflections, depth of field, and shadows from scratch.
                         </p>
+                        <div class="modal-item">
+                            <img class="modalimage" style="width:250px" src="projects/raytracer/lights and balls.jpg" />
+                        </div>
+                        <div class="modal-item">
+                            <img class="modalimage" style="width:250px;margin-top:25px;" src="projects/raytracer/circleline.jpg" />
+                        </div>
+                        <div class="modal-item">
+                            <img class="modalimage" style="width:250px" src="projects/raytracer/metal spheres.jpg" />
+                        </div>
                     </div>
                     <!-- Shaders -->
                     <div class="modal-meat" id="shaders">
@@ -272,6 +239,50 @@
                             modulation, normal mapping, checkerboard pattern, cel (toon), and a more 
                             creative rainbow shader!
                         </p>
+                        <div class="galleryrow">
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/shader/cel.gif" />
+                                <p class="modal-item-info">
+                                    Cel 
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/shader/checker.gif" />
+                                <p class="modal-item-info">
+                                    Checker Texture
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/shader/gouraud.gif" />
+                                <p class="modal-item-info">
+                                    Gouraud
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/shader/normal.gif" />
+                                <p class="modal-item-info">
+                                    Normal
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/shader/phong.gif" />
+                                <p class="modal-item-info">
+                                    Phong
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/shader/rainbow.gif" />
+                                <p class="modal-item-info">
+                                    ~Rainbow~
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/shader/text.gif" />
+                                <p class="modal-item-info">
+                                    Cow
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <!-- Insect Garden -->
                     <div class="modal-meat" id="insect-garden">
@@ -280,6 +291,23 @@
                             These insects are created either randomly or according to user-specified input in a slider menu. 
                             The tool was written in Python using Maya's API, and the final insects were rendered in Arnold.                       
                         </p>
+                        <div class="galleryrow">
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/insects/bug_10a.jpg" />
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/insects/bug_28_edited.jpg" />
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/insects/bug_26.jpg" />
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/insects/bug_8a.jpg" />
+                            </div>
+                        </div>
+                        <div class="galleryrow">
+                            <iframe class="modal-video" src="https://www.youtube.com/embed/9UqZnlngqI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
+                        </div>
                     </div>
                     <!-- Tree Generation -->
                     <div class="modal-meat" id="tree-generation">
@@ -293,6 +321,9 @@
                         <p>
                             The tool was written in Python for Maya, and the final trees were rendered in Arnold. 
                         </p>
+                        <div class="galleryrow">
+                            <iframe class="modal-video" src="https://www.youtube.com/embed/_0jiqx5bpeA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
+                        </div>
                     </div>
                     <!-- Walter -->
                     <div class="modal-meat" id="walter">
@@ -302,6 +333,9 @@
                             has a fully functional rig with full IK/FK functionality for the arms, legs, and spine. 
                             The walk cycle animation was also done be me, with the final scene rendered in Arnold.
                         </p>
+                        <div class="galleryrow">
+                            <iframe class="modal-video" src="https://www.youtube.com/embed/M-Oz2VAiVOQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
+                        </div>
                     </div>
                     <!-- Spaceflight -->
                     <div class="modal-meat" id="spaceflight">
@@ -321,13 +355,16 @@
                             were all made using THREE.js. After the desktop and mobile versions were completed 
                             in July 2019, the site gained over 1,500 active users in its first four months. 
                         </p>
+                        <div class="galleryrow">
+                            <iframe class="modal-video" src="https://www.youtube.com/embed/5sAp3FlzP7g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holo-brawl')" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Holo Brawl VR</div>
                 <img class="projectimage" src="projects/holobrawl/holobrawlgif.gif">
                 <p class="easyreading projectinfo">
@@ -346,17 +383,26 @@
             <div class="galleryproject" onclick="openModal(event, 'projectModal', 'SineAR', null, 'sine-ar')">
                 <div class="projecttext">SineAR</div>
                 <img class="projectimage" src="projects/sine_ar.gif">
+                <p class="easyreading projectinfo">
+                    AR app that allows users to learn about and spatially play with acoustic waves.
+                </p>
             </div>            
         </div>
 
         <div class="galleryrow" id="portrait">
             <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Ray Tracer', null, 'ray-tracer')">
                 <div class="projecttext">Ray Tracer</div>
-                <img class="projectimage" src="projects/lights and balls cropped.jpg">
+                <img class="projectimage" src="projects/raytracer/lights and balls cropped.jpg">
+                <p class="easyreading projectinfo">
+                    Ray tracer in C. 
+                </p>
             </div>            
             <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Shaders', null, 'shaders')">
                 <div class="projecttext">Shaders</div>
                 <img class="projectimage" src="projects/shader/rainbow.gif">
+                <p class="easyreading projectinfo">
+                    (Adorable) GLSL shaders
+                </p>
             </div>   
         </div>
 
