feat: added all media to projects

--- a/index.html
+++ b/index.html
@@ -169,33 +169,36 @@
                         </p>
                         <div class="galleryrow" id="portrait">
                             <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/using-ui.png" />
+                                <img class="modalimagelong" src="projects/curve/20210511_122300_MixedReality.jpg" />
                                 <p class="modal-item-info">
-                                    using the game's user interface
+                                    Multi-grabbing placards to place them on the pinboard
                                 </p>
                             </div>
                             <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/pieces-puching.png" />
+                                <img class="modalimagelong" src="projects/curve/FullPinboard.jpg" />
                                 <p class="modal-item-info">
-                                    Pieces punching eachother
+                                    <i>Discrete</i> pinboard with Yelp, Twitter, and NYC 311 placards
                                 </p>
                             </div>
                             <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/piecing-fighting.png" />
+                                <img class="modalimagelong" src="projects/curve/pinboard.gif" />
                                 <p class="modal-item-info">
-                                    Pieces fighting eachother
+                                    Moving placards around the <i>Continuous</i> pinboard
                                 </p>
                             </div>
                             <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/placing-piece-to-attack.png" />
+                                <img class="modalimagelong" src="projects/curve/map_with_buildings.png" />
                                 <p class="modal-item-info">
-                                    Player placing their piece to attack opponent
+                                    NYC map with Yelp, Twitter, and NYC 311 placards throughout
                                 </p>
                             </div>
-                            <div class="modal-item">
-                                <img class="modalimage" src="projects/holobrawl/placing-piece.png" />
+                        </div>
+                        <div class="galleryrow" style="margin-top: 20px;"> 
+                            <!-- CSS edited to crop video!! -->
+                            <div class="modal-video-item" style="overflow:hidden;display:block;">
+                                <iframe class="modal-video" style="margin-top: -10px;" src="https://www.youtube.com/embed/DNvpctzyXcI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 <p class="modal-item-info">
-                                    Player moving their piece
+                                    Study Environment
                                 </p>
                             </div>
                         </div>
@@ -211,8 +214,11 @@
                             and amplitude leads to an interesting new world of sound.
                         </p>
                         <div class="galleryrow"> 
+                            <img class="modalimage" style="width:300px; margin:20px;" src="projects/sine_ar.gif" />
+                        </div>
+                        <div class="galleryrow"> 
                             <div class="modal-video-item">
-                                <iframe class="modal-video" src="https://www.youtube.com/embed/c0oPHvO_91k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
+                                <iframe class="modal-video" src="https://www.youtube.com/embed/c0oPHvO_91k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
@@ -337,12 +343,6 @@
                             <iframe class="modal-video" src="https://www.youtube.com/embed/M-Oz2VAiVOQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
                         </div>
                     </div>
-                    <!-- Spaceflight -->
-                    <div class="modal-meat" id="spaceflight">
-                        <p>
-                            Stuff about space
-                        </p>
-                    </div>
                     <!-- Sketchsage -->
                     <div class="modal-meat" id="sketchsage">
                         <p>
@@ -357,6 +357,52 @@
                         </p>
                         <div class="galleryrow">
                             <iframe class="modal-video" src="https://www.youtube.com/embed/5sAp3FlzP7g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <!-- Electric Slide -->
+                    <div class="modal-meat" id="electric-slide">
+                        <p>
+                            My friends and I built this Dance Dance Revolution hand-held game completely from scratch. 
+                            I used SolidWorks to CAD the container, and we laser-cut acrylic boards to create the shape. 
+                            We used an arduino to power the game, and we created the logic and wired it up completely on our own. 
+                        </p>
+                        <p>
+                            It was suprisingly fun to play, but insanely hard since you'd lose a ridiculous amount of points
+                            when you didn't hit the button at the right time. Overall, a fun project to work on. 
+                        </p>
+                        <div class="galleryrow">
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/electricslide/shot_1.png" />
+                                <p class="modal-item-info">
+                                    Winning the game!
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/electricslide/shot_2.png" />
+                                <p class="modal-item-info">
+                                   Just starting the game...
+                                </p>
+                            </div>
+                        </div>
+                        <div class="galleryrow">
+                            <div class="modal-item">
+                                <iframe class="modal-video" src="https://www.youtube.com/embed/zihFR4oej8g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" muted autoplay allowfullscreen></iframe>
+                                <p class="modal-item-info">
+                                    You can click into it, we just used some copywrited songs!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Spaceflight -->
+                    <div class="modal-meat" id="space-flight">
+                        <p>
+                            Stuff about space
+                        </p>
+                        <div class="modal-item">
+                            <img class="modalimage" style="width:300px;" src="projects/PosterPicture.jpg" />
+                        </div>
+                        <div class="modal-item">
+                            <img class="modalimage" style="width:300px;margin-top:60px;" src="projects/payload_picture.png" />
                         </div>
                     </div>
                 </div>
@@ -374,7 +420,7 @@
             </div>           
             <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Collaborative Urban Virtual Environment (CURVE)', null, 'curve')">
                 <div class="projecttext">Collaborative Urban Virtual Environment (CURVE)</div>
-                <img class="projectimage" src="projects/pinboard.gif" >
+                <img class="projectimage" src="projects/curve/pinboard.gif" >
                 <p class="easyreading projectinfo">
                     Collaborative exploration of urban data in virtual reality 
                     using SteamVR. 
@@ -422,14 +468,21 @@
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Human Spaceflight and Vision Empairment Poster', null, 'spaceflight')">
-                <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
-                <img class="projectimage" src="projects/payload_picture.png">
-            </div>            
             <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Sketch Sage Studio', null, 'sketchsage')">
                 <div class="projecttext">Sketch Sage Studio</div>
                 <img class="projectimage" src="projects/sketchsage.png">
             </div>   
+        </div>
+
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Human Spaceflight and Vision Empairment Poster', null, 'space-flight')">
+                <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
+                <img class="projectimage" src="projects/payload_picture.png">
+            </div>  
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'The Electric Slide', null, 'electric-slide')">
+                <div class="projecttext">The Electric Slide</div>
+                <img class="projectimage" src="projects/electricslide/shot_2.png">
+            </div>  
         </div>
     </div>
 
