--- a/index.html
+++ b/index.html
@@ -497,13 +497,13 @@
                 Most of these portraits I drew between 2014 and 2018. 
             </p>
             <p>
-                The first pieces in each section, “A  Waltz with the Cosmos” and
-                “Remote (not in) Control”, were displayed in the Rubell Family 
+                The first pieces in each section, <i>A  Waltz with the Cosmos</i> and
+                <i>Remote (not in) Control</i>, were displayed in the Rubell Family 
                 Collection Gallery in Miami. 
             </p>
             <p>
                 I won the Congressional Art Award for the second piece below, 
-                "Head in the Clouds", which was displayed in the U.S. Capitol for a year.
+                <i>Head in the Clouds</i>, which was displayed in the U.S. Capitol for a year.
             </p>
         </div>
 
