feat: focus working on pageload and close

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             <h3>PORTRAITS</h3>
             <div>
                 <div class="galleryrow" id="portrait">
-                    <img class="galleryimage" src="artwork/A Waltz with the Cosmos.jpeg" onclick="openModal(event, 'artModal', 'A Waltz with the Cosmos', 'artwork/A Waltz with the Cosmos.jpeg')"/>
+                    <img class="galleryimage" id="a-waltz-with-the-cosmos" src="artwork/A Waltz with the Cosmos.jpeg" onclick="openModal(event, 'artModal', 'A Waltz with the Cosmos', 'artwork/A Waltz with the Cosmos.jpeg')"/>
                     <img class="galleryimage" src="artwork/Head in the Clouds.jpeg" onclick="openModal(event, 'artModal', 'Head in the Clouds', 'artwork/Head in the Clouds.jpeg')"/>
                     <img class="galleryimage" src="artwork/Kumquat Kids.jpeg" onclick="openModal(event, 'artModal', 'Kumquat Kids', 'artwork/Kumquat Kids.jpeg')"/>
                 </div>
