feat: modal from params working for art

--- a/index.html
+++ b/index.html
@@ -524,45 +524,45 @@
             <h3>PORTRAITS</h3>
             <div>
                 <div class="galleryrow" id="portrait">
-                    <img class="galleryimage" id="a-waltz-with-the-cosmos" src="artwork/A Waltz with the Cosmos.jpeg" onclick="openModal(event, 'artModal', 'A Waltz with the Cosmos', 'artwork/A Waltz with the Cosmos.jpeg')"/>
-                    <img class="galleryimage" src="artwork/Head in the Clouds.jpeg" onclick="openModal(event, 'artModal', 'Head in the Clouds', 'artwork/Head in the Clouds.jpeg')"/>
-                    <img class="galleryimage" src="artwork/Kumquat Kids.jpeg" onclick="openModal(event, 'artModal', 'Kumquat Kids', 'artwork/Kumquat Kids.jpeg')"/>
+                    <img class="galleryimage" id="A-Waltz-with-the-Cosmos" src="artwork/A Waltz with the Cosmos.jpeg" onclick="openModal(event, 'artModal', 'A Waltz with the Cosmos', 'artwork/A Waltz with the Cosmos.jpeg')"/>
+                    <img class="galleryimage" id="Head-in-the-Clouds" src="artwork/Head in the Clouds.jpeg" onclick="openModal(event, 'artModal', 'Head in the Clouds', 'artwork/Head in the Clouds.jpeg')"/>
+                    <img class="galleryimage" id="Kumquat-Kids" src="artwork/Kumquat Kids.jpeg" onclick="openModal(event, 'artModal', 'Kumquat Kids', 'artwork/Kumquat Kids.jpeg')"/>
                 </div>
                 <div class="galleryrow" id="portrait">
-                    <img class="galleryimage" src="artwork/debbie golden.jpeg" onclick="openModal(event, 'artModal', 'Sidewalk Envies', 'artwork/debbie golden.jpeg')"/>
-                    <img class="galleryimage" src="artwork/Shinigami.jpeg" onclick="openModal(event, 'artModal', 'Shinigami', 'artwork/Shinigami.jpeg')"/>
-                    <img class="galleryimage" src="artwork/Chrissy Boi.jpeg" onclick="openModal(event, 'artModal', 'Mr. Chris', 'artwork/Chrissy Boi.jpeg')"/>
+                    <img class="galleryimage" id="Sidewalk-Envies" src="artwork/debbie golden.jpeg" onclick="openModal(event, 'artModal', 'Sidewalk Envies', 'artwork/debbie golden.jpeg')"/>
+                    <img class="galleryimage" id="Shinigami" src="artwork/Shinigami.jpeg" onclick="openModal(event, 'artModal', 'Shinigami', 'artwork/Shinigami.jpeg')"/>
+                    <img class="galleryimage" id="Chrissy-Boi" src="artwork/Chrissy Boi.jpeg" onclick="openModal(event, 'artModal', 'Mr. Chris', 'artwork/Chrissy Boi.jpeg')"/>
                 </div>
                 <div class="galleryrow" id="portrait">
-                    <img class="galleryimage" src="artwork/baby rainbow.jpeg" onclick="openModal(event, 'artModal', 'Breeze By', 'artwork/baby rainbow.jpeg')"/>
-                    <img class="galleryimage" src="artwork/The Wrath of Laplaces Demon.jpeg" onclick="openModal(event, 'artModal', 'The Wrath of Laplace\&apos;s Demon', 'artwork/The Wrath of Laplaces Demon.jpeg')"/>
-                    <img class="galleryimage" src="artwork/Wavetrain.jpeg" onclick="openModal(event, 'artModal', 'Wavetrain', 'artwork/Wavetrain.jpeg')"/>
+                    <img class="galleryimage" id="Breeze-By" src="artwork/baby rainbow.jpeg" onclick="openModal(event, 'artModal', 'Breeze By', 'artwork/baby rainbow.jpeg')"/>
+                    <img class="galleryimage" id="The-Wrath-of-Laplaces-Demon" src="artwork/The Wrath of Laplaces Demon.jpeg" onclick="openModal(event, 'artModal', 'The Wrath of Laplace\&apos;s Demon', 'artwork/The Wrath of Laplaces Demon.jpeg')"/>
+                    <img class="galleryimage" id="Wavetrain" src="artwork/Wavetrain.jpeg" onclick="openModal(event, 'artModal', 'Wavetrain', 'artwork/Wavetrain.jpeg')"/>
                 </div>
             </div>
 
             <h3>SURREAL</h3>
             <div>
                 <div class="galleryrow" id="surreal">
-                    <img class="galleryimage" src="artwork/eyes sci fi.jpeg" onclick="openModal(event, 'artModal', 'Traveling', 'artwork/eyes sci fi.jpeg')"/>
-                    <img class="galleryimage" src="artwork/Remote (not in) Control .jpeg" onclick="openModal(event, 'artModal', 'Remote (not in) Control', 'artwork/Remote (not in) Control .jpeg')"/>
-                    <img class="galleryimage" src="artwork/Viva drawing.jpeg" onclick="openModal(event, 'artModal', 'Viva', 'artwork/Viva drawing.jpeg')"/>
+                    <img class="galleryimage" id="Traveling-Piece" src="artwork/eyes sci fi.jpeg" onclick="openModal(event, 'artModal', 'Traveling', 'artwork/eyes sci fi.jpeg')"/>
+                    <img class="galleryimage" id="Remote-not-in-Control" src="artwork/Remote (not in) Control .jpeg" onclick="openModal(event, 'artModal', 'Remote (not in) Control', 'artwork/Remote (not in) Control .jpeg')"/>
+                    <img class="galleryimage" id="Viva" src="artwork/Viva drawing.jpeg" onclick="openModal(event, 'artModal', 'Viva', 'artwork/Viva drawing.jpeg')"/>
                 </div>
                 <div class="galleryrow" id="surreal">
-                    <img class="galleryimage" src="artwork/Hopscotch .jpeg" onclick="openModal(event, 'artModal', 'Weather Study', 'artwork/Hopscotch .jpeg')"/>
-                    <img class="galleryimage" src="artwork/Vision .jpg" onclick="openModal(event, 'artModal', 'Vision', 'artwork/Vision .jpg')"/>
+                    <img class="galleryimage" id="Hopscotch" src="artwork/Hopscotch .jpeg" onclick="openModal(event, 'artModal', 'Weather Study', 'artwork/Hopscotch .jpeg')"/>
+                    <img class="galleryimage" id="Vision" src="artwork/Vision .jpg" onclick="openModal(event, 'artModal', 'Vision', 'artwork/Vision .jpg')"/>
                 </div>
                 <div class="galleryrow" id="surreal">
-                    <img class="galleryimagelong" src="artwork/A Valley in Shadow.jpeg" onclick="openModal(event, 'artModal', 'A Valley in Shadow', 'artwork/A Valley in Shadow.jpeg')"/>
-                    <img class="galleryimagelong" src="artwork/Happy Nights call for Dreary Days.jpeg" onclick="openModal(event, 'artModal', 'Happy Nights call for Dreary Days', 'artwork/Happy Nights call for Dreary Days.jpeg')"/>
-                    <img class="galleryimagelong" src="artwork/Words I Thought Id Never Speak.jpeg" onclick="openModal(event, 'artModal', 'Words I Thought I\&apos;d Never Speak', 'artwork/Words I Thought Id Never Speak.jpeg')"/>
+                    <img class="galleryimagelong" id="A-Valley-in-Shadow" src="artwork/A Valley in Shadow.jpeg" onclick="openModal(event, 'artModal', 'A Valley in Shadow', 'artwork/A Valley in Shadow.jpeg')"/>
+                    <img class="galleryimagelong" id="Happy-Nights-call-for-Dreary-Days" src="artwork/Happy Nights call for Dreary Days.jpeg" onclick="openModal(event, 'artModal', 'Happy Nights call for Dreary Days', 'artwork/Happy Nights call for Dreary Days.jpeg')"/>
+                    <img class="galleryimagelong" id="Words-I-Thought-Id-Never-Speak" src="artwork/Words I Thought Id Never Speak.jpeg" onclick="openModal(event, 'artModal', 'Words I Thought I\&apos;d Never Speak', 'artwork/Words I Thought Id Never Speak.jpeg')"/>
                 </div>
             </div>
 
             <h3>EMBROIDERY</h3>
             <div>
                 <div class="galleryrow" id="embroidery">
-                    <img class="galleryimagelong" src="artwork/knight embroidery 1.jpg" onclick="openModal(event, 'artModal', 'Encounter the Couple', 'artwork/knight embroidery 1.jpg')"/>
-                    <img class="galleryimage" src="artwork/embroidered_bird.png" onclick="openModal(event, 'artModal', 'Bird Study', 'artwork/embroidered_bird.png')"/>
+                    <img class="galleryimagelong" id="Encounter-the-Couple" src="artwork/knight embroidery 1.jpg" onclick="openModal(event, 'artModal', 'Encounter the Couple', 'artwork/knight embroidery 1.jpg')"/>
+                    <img class="galleryimage" id="Bird-Study" src="artwork/embroidered_bird.png" onclick="openModal(event, 'artModal', 'Bird Study', 'artwork/embroidered_bird.png')"/>
                 </div>
             </div>
 
